# audio_to_article

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: audio_to_article_via_api.ipynb
src/audio_to_article/: main.py
tests/: test_main.py
